fix(grade-nav): remove unnecessary z-index to fix UI issues

--- a/src/features/grade-navigation/style.module.scss
+++ b/src/features/grade-navigation/style.module.scss
@@ -20,7 +20,6 @@ $text-color-hover: white;
 
     margin-top: -2px;
     position: relative;
-    z-index: 9;
 
     &-link {
       display: inline-flex;
